Fri Jan 27 20:30:01 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
        * DAnCE/NodeManager/NodeManager_Impl.cpp
        
          Fixed uninitialized variable warnings on Solaris GCC.
         
         *DAnCE/NodeManager/NodeManager.mpc
         
          Refactored the projects here so all files related to NodeManager
          are only compiled once. 
        
Fri Jan 27 19:15:19 UTC 2006  Nilabja R  <nilabjar@dre.vanderbilt.edu>

        * DAnCE/NodeManager/Monitor.mpc: Added the dependancy on 
          TargetManaer_stub

Fri Jan 27 19:07:08 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeManager/MonitorController.h
        * DAnCE/NodeManager/MonitorController.inl

        Refined the fix in
        Fri Jan 27 17:29:54 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>
        to use ACE_SYNCH_MUTEX.  Thanks to Doug Schmidt for suggesting the
        improvement.

Fri Jan 27 17:35:55 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * RACE/Controller/Component/Controller.mpc

          Fixed linking errors on Mac OS X.

Fri Jan 27 17:29:54 UTC 2006  William Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeManager/MonitorController.h
        * DAnCE/NodeManager/MonitorController.inl

          Added preprocessor logic to fall back to an ACE_Mutex on
          platforms that don't support ACE_Thread_Mutex.

Fri Jan 27 16:59:11 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
        * DAnCE/NodeManager/NodeManager_Impl.cpp

          Fixed a couple of warnings on SuSE_10_0_GCC4.0.2_x86_64_Valgrind
          build about pointer initialization.

Thu Jan 26 23:48:47 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>

        * examples/Hello/step-by-step.html

          Fixed a fuzz error about dependency on ~schmidt/ACE_wrappers.
